--- a/rsocket-js-client/package.json
+++ b/rsocket-js-client/package.json
@@ -13,9 +13,10 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "rsocket-core": "0.0.25",
-    "rsocket-flowable": "0.0.25",
-    "rsocket-websocket-client": "0.0.25",
+    "rsocket-composite-metadata": "^1.0.0-alpha.2",
+    "rsocket-core": "1.0.0-alpha.1",
+    "rsocket-flowable": "0.0.27",
+    "rsocket-websocket-client": "1.0.0-alpha.1",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
@@ -44,8 +45,8 @@
     ]
   },
   "devDependencies": {
-    "@types/rsocket-core": "0.0.6",
+    "@types/rsocket-core": "0.0.7",
     "@types/rsocket-flowable": "0.0.5",
-    "@types/rsocket-websocket-client": "0.0.3"
+    "@types/rsocket-websocket-client": "0.0.4"
   }
 }
